# expressPython

./: .astylerc  .gitignore  .gitmodules  About.htm  CMakeLists.txt  CNAME  PyRun.pro  PyRun.rc  PyRunResources.qrc  README.md  antlr4_setup_macOs_linux.sh  antlr_mac_linux.sh  appveyor.yml  build.cmd  build.sh  c.sh  codeeditor.cpp  codeeditor.h  emb.h  ep_jedi.py  ep_runner.py  expressPython  getjedi.py  main.cpp  mainview.cpp  mainview.h  mainview.ui  moc_predefs.h  pythonsyntaxhighlighter.cpp  pythonsyntaxhighlighter.h  snippets.cpp  startme.py  windows_res.rc  xpmanifest.xml
.github/workflows/: main.yml
ANTLR/: Python3.g4  Python3.interp  Python3.tokens  Python3BaseListener.cpp  Python3BaseListener.h  Python3Lexer.cpp  Python3Lexer.h  Python3Lexer.interp  Python3Lexer.tokens  Python3Listener.cpp  Python3Listener.h  Python3Parser.cpp  Python3Parser.h  customtoken.cpp  customtoken.h
ANTLR4 Runtime/runtime/: install_manifest.txt
ANTLR4 Runtime/runtime/src/: Lexer.cpp
ANTLR4runtime/: deploy-macos.sh
ANTLR4runtime/run/usr/local/include/antlr4-runtime/: Lexer.h
ANTLR4runtime/runtime/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
ANTLR4runtime/runtime/runtime/: cmake_install.cmake
CodeEditor/: antlrsyntaxhighlighter.cpp  antlrsyntaxhighlighter.h  codeeditor.cpp  codeeditor.h  codelineedit.cpp  codelineedit.h  pythonsyntaxhighlighter.cpp  pythonsyntaxhighlighter.h
Features/: autocomplete.txt  snippets.cpp  snippets.h  xquestion.cpp  xquestion.h  xtute.cpp  xtute.h
Icons/: PyRunImg.icns
PythonAccess/: emb.cpp  emb.h  jedi.cpp  jedi.h  pythonworker.cpp  pythonworker.h
UI/: mainview.cpp  mainview.h  mainview.ui
WindowsResources/: win_rsrc.rc  xpmanifest.xml
share/: expressPython.desktop
